# uVkCompute

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: build-android-linux.yml  build-linux.yml  lint.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/argmax/: CMakeLists.txt  README.md  one_workgroup_argmax_loop.glsl  one_workgroup_argmax_loop.spv  one_workgroup_argmax_main.cc  one_workgroup_argmax_subgroup.glsl  one_workgroup_argmax_subgroup.spv  one_workgroup_argmax_subgroup_f16.glsl  one_workgroup_argmax_subgroup_f16.spv  one_workgroup_argmax_subgroup_f32.glsl  one_workgroup_argmax_subgroup_f32.spv
benchmarks/compute/: CMakeLists.txt  README.md  mad_throughput.glsl  mad_throughput_main.cc  throughput.cc
benchmarks/convolution/: CMakeLists.txt  README.md  conv2d_main.cc  conv2d_packed.glsl  conv2d_tiled.glsl  depthwise_conv2d_main.cc  depthwise_conv2d_tiled.glsl
benchmarks/matmul/: CMakeLists.txt  README.md  matmul_scalar_block.glsl  matmul_scalar_block_main.cc  matmul_tiled.cc  matmul_tiled.glsl  matmul_tiled_fp16.glsl  matmul_tiled_fp32.glsl  matmul_tiled_i32.glsl  matmul_tiled_i8.glsl  matmul_tiled_i8_innerproduct.glsl  matmul_tiled_main.cc
benchmarks/memory/: CMakeLists.txt  README.d  README.md  copy_sampled_image_to_storage_buffer.glsl  copy_sampled_image_to_storage_buffer_main.cc  copy_storage_buffer.cc  copy_storage_buffer.h  copy_storage_buffer_main.cc  copy_storage_buffer_scalar.glsl  copy_storage_buffer_scalar_main.cc  copy_storage_buffer_vector.glsl
benchmarks/mmt/: CMakeLists.txt  README.md  mmt_i8.glsl  mmt_main.cc
benchmarks/overhead/: CMakeLists.txt  README.md  dispatch_void_shader_main.cc
benchmarks/reduction/: CMakeLists.txt  README.md  atomic_reduce_loop_float.glsl  atomic_reduce_loop_int.glsl  atomic_reduce_main.cc  atomic_reduce_subgroup_float.glsl  atomic_reduce_subgroup_int.glsl  one_workgroup_reduce_atomic.glsl  one_workgroup_reduce_loop.glsl  one_workgroup_reduce_main.cc  one_workgroup_reduce_subgroup.glsl  tree_reduce_loop.glsl  tree_reduce_main.cc  tree_reduce_subgroup.glsl
benchmarks/subgroup/: CMakeLists.txt  subgroup_arithmetic_intrinsic.glsl  subgroup_arithmetic_loop.glsl  subgroup_arithmetic_main.cc
benchmarks/vmt/: CMakeLists.txt  README.md  grid_strided_vmt_i8.glsl  grid_strided_vmt_main.cc  vmt_i8.glsl  vmt_main.cc  vmt_promote_lhs_i8.glsl
benchmarks/void/: dispatch_void_shader_main.cc
cmake/: uvkc_cc_binary.cmake  uvkc_cc_library.cmake  uvkc_find_vulkan_toolchain.cmake  uvkc_glsl_shader_instance.cmake  uvkc_glsl_shader_module.cmake  uvkc_glsl_shader_permutation.cmake  uvkc_utils.cmake
tools/: CMakeLists.txt  generate_shader_permutations.py  print_pipeline_layout_main.cc
tools/ci/: build_android.sh  build_linux.sh  build_windows.ps1
uvkc/: README.md
uvkc/base/: log.h  (+10 more)
(+49 files in other folders)
